--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -277,32 +277,6 @@ QMenu::separator {
 }</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="loadDicomButton">
-    <property name="geometry">
-     <rect>
-      <x>619</x>
-      <y>30</y>
-      <width>131</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Загрузить файл</string>
-    </property>
-   </widget>
-   <widget class="SceneZoom" name="dicomGraphicsView">
-    <property name="geometry">
-     <rect>
-      <x>780</x>
-      <y>10</y>
-      <width>500</width>
-      <height>500</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::VLine</enum>
-    </property>
-   </widget>
    <widget class="SideBar" name="sideBarWidget" native="true">
     <property name="geometry">
      <rect>
@@ -314,18 +288,16 @@ QMenu::separator {
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout"/>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="ViewerForm" name="viewerWidget" native="true">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>20</y>
-      <width>151</width>
-      <height>25</height>
+      <x>230</x>
+      <y>0</y>
+      <width>1</width>
+      <height>1</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Check C-Echo</string>
-    </property>
+    <layout class="QVBoxLayout" name="viewerLayout"/>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -343,14 +315,15 @@ QMenu::separator {
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>SceneZoom</class>
-   <extends>QGraphicsView</extends>
-   <header location="global">scenezoom.h</header>
-  </customwidget>
-  <customwidget>
    <class>SideBar</class>
    <extends>QWidget</extends>
    <header location="global">sidebar.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ViewerForm</class>
+   <extends>QWidget</extends>
+   <header>viewerform.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
