--- a/accessibilityform.ui
+++ b/accessibilityform.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="autoFillBackground">
+   <bool>true</bool>
+  </property>
   <widget class="QPushButton" name="CEchoButton">
    <property name="geometry">
     <rect>
@@ -26,7 +29,7 @@
     <string>Проверить соединение</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>271</x>
