--- a/viewerform.ui
+++ b/viewerform.ui
@@ -16,8 +16,8 @@
   <widget class="QPushButton" name="loadImageButton">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>40</y>
+     <x>310</x>
+     <y>30</y>
      <width>97</width>
      <height>25</height>
     </rect>
@@ -29,10 +29,20 @@
   <widget class="SceneZoom" name="dicomGraphicsView">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>30</y>
+     <x>520</x>
+     <y>50</y>
      <width>531</width>
-     <height>471</height>
+     <height>521</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QTableWidget" name="dicomAttributeTableWidget">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>60</y>
+     <width>501</width>
+     <height>511</height>
     </rect>
    </property>
   </widget>
