--- a/dbform.ui
+++ b/dbform.ui
@@ -16,10 +16,20 @@
   <widget class="QTableWidget" name="dbTableWidget">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>40</y>
+     <x>40</x>
+     <y>70</y>
      <width>551</width>
      <height>401</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QTableWidget" name="dbBorderDicomTable">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>500</y>
+     <width>991</width>
+     <height>181</height>
     </rect>
    </property>
   </widget>
