Incomplete implementation of serialization

--- a/resource.qrc
+++ b/resource.qrc
@@ -6,5 +6,7 @@
 	<file alias="accessibility">icons/accessibility.png</file>
 	<file alias="ok">icons/ok.png</file>
 	<file alias="unavailable">icons/unavailable.png</file>
+	<file alias="send">icons/send.png</file>
+	<file alias="ref">icons/ref.png</file>
     </qresource>
 </RCC>
