--- a/accessibilityform.ui
+++ b/accessibilityform.ui
@@ -14,63 +14,8 @@
    <string>Form</string>
   </property>
   <property name="autoFillBackground">
-   <bool>true</bool>
+   <bool>false</bool>
   </property>
-  <widget class="QPushButton" name="CEchoButton">
-   <property name="geometry">
-    <rect>
-     <x>600</x>
-     <y>70</y>
-     <width>221</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Проверить соединение</string>
-   </property>
-  </widget>
-  <widget class="QWidget" name="layoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>271</x>
-     <y>30</y>
-     <width>292</width>
-     <height>104</height>
-    </rect>
-   </property>
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="1" colspan="2">
-     <widget class="QLineEdit" name="PortForm"/>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLineEdit" name="IPAddressForm"/>
-    </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="IpAddressLabel">
-      <property name="text">
-       <string>IP  адрес</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="2">
-     <widget class="QLabel" name="PortLabel">
-      <property name="text">
-       <string>Порт</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLineEdit" name="AETitleForm"/>
-    </item>
-    <item row="3" column="0" colspan="2">
-     <widget class="QLabel" name="AETitleLabel">
-      <property name="text">
-       <string>Заголовок</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
  </widget>
  <resources/>
  <connections/>
